--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "connectionString":"server=localhost,1433;database=shop;User ID=SA;Password=1q2w3e4r!@#"
+    "connectionString":"Server=tcp:cursobalta.database.windows.net,1433;Initial Catalog=CursoBalta;Persist Security Info=False;User ID=pedroperondini;Password=1q2w3e4r!@#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
